# cfonts

./: .babelrc  .editorconfig  .gitignore  .npmignore  .travis.yml  Gruntfile.js  LICENSE  README.md  RELEASE.md  cfonts.d.ts  cfonts.sublime-project  declaration.tsconfig.json  index.js  package-lock.json  package.json
.github/workflows/: testing.yml
fonts/: 3d.json  block.json  chrome.json  console.json  grid.json  huge.json  pallet.json  shade.json  simple.json  simple3d.json  simpleBlock.json  slick.json  tiny.json
lib/: AddChar.js  AddLetterSpacing.js  AddLine.js  AddShortcuts.js  AlignText.js  CharLength.js  CheckInput.js  CleanInput.js  Color.js  Colorize.js  Debugging.js  DisplayHelp.js  DisplayVersion.js  GetFont.js  GetOptions.js  Log.js  ParseArgs.js  Render.js  RenderConsole.js  Say.js  Size.js  UpperCaseFirst.js  chalk.js  constants.js  lib.js
nodejs/: .prettierignore  .prettierrc  Makefile  README.md  package.json  tsconfig.json
nodejs/src/: AddChar.js  Log.js  (+27 more)
rust/: Cargo.toml  Makefile  README.md  config.toml  rustfmt.toml
rust/src/: args.rs  chars.rs  cli.rs  color.rs  config.rs  debug.rs  font.rs  gradient.rs  helpers.rs  lib.rs  main.rs  parse_args.rs  render.rs
rust/tests/: args_parse_test.rs  args_test.rs  char_test.rs  chars_test.rs  cli_test.rs  color_test.rs  config_test.rs  debug_test.rs  end-to-end_test.rs  font_test.rs  gradient_test.rs  lib_test.rs  main_test.rs  parse_args_test.rs
rust/tests/end-to-end/: index.js  tests.js
src/: AddChar.js  AddLetterSpacing.js  AddLine.js  AddShortcuts.js  AlignText.js  Chalk.js  CharLength.js  CheckInput.js  CleanInput.js  Color.js  Colorize.js  Debugging.js  DisplayHelp.js  DisplayVersion.js  GetFirstCharacterPosition.js  GetFont.js  GetLongestLine.js  GetOptions.js  Gradient.js  Log.js  Options.js  ParseArgs.js  Render.js  RenderConsole.js  Say.js  Size.js  UpperCaseFirst.js  bin.js  constants.js  index.js  lib.js
test/: addchar.spec.js  addletterspacing.spec.js  addline.spec.js  addshortcuts.spec.js  aligntext.spec.js  ansisytle.spec.js  apitest.js  charlength.spec.js  checkinput.spec.js  cleaninput.spec.js  cli.spec.js  colorize.spec.js  debugging.spec.js  displayhelp.spec.js  displayversion.spec.js  env.js  examples.js  fonttest.js  getfont.spec.js  getoptions.spec.js  log.spec.js  parseargs.spec.js  render.spec.js  renderconsole.spec.js  say.spec.js  settings.spec.js  size.spec.js
(+80 files in other folders)
